# nurby-backend

./: .env.example  .gitignore  Nurby_Architecture.docx  Nurby_Mockups.html  README.md  SECURITY.md  alembic.ini  docker-compose.update.yml  docker-compose.yml  llms.txt  pyproject.toml
.claude/: launch.json
alembic/: env.py
config/: mediamtx.yml
dev/: fake-camera.sh
docs/: agent-design.md  agent-eval.md  api.md  devices.md  guardian-build-plan.md  guardian-portal-product-brief.md  har-build-trace.md  har-design.md  har-phase0-findings.md  mcp.md  onboarding-review.md  releasing.md  updating.md  vlm-enrichment-design.md  vss-learnings-plan.md  webhooks.md
frontend/: Dockerfile  next.config.ts  package-lock.json
scripts/: backfill_observation_actions.py  fetch-models.sh  fix_real_frames.py  fix_vehicles_vlm.py  ground_observations.py  ground_seed_with_vlm.py  seed_demo_data.py  seed_eval_db.py  seed_guardian_ss.py  seed_screenshots.py  smoke_onboarding.sh  update.sh
services/: recap.py
shared/: app_settings.py  auth.py  config.py  crypto.py  database.py  email.py  models.py  person_alias.py  schemas.py  version.py
tests/: _engine_helpers.py  test_actions.py  test_agent_analyzer.py  test_agent_budget.py  test_agent_driver.py  test_agent_tools.py  test_api_keys.py  test_audio_mock_e2e.py  test_audio_vad.py  test_digest_narrative.py  test_guardian_alerts.py  test_guardian_api.py  test_guardian_delivery.py  test_guardian_entitlements.py  test_guardian_imaging.py  test_guardian_lifecycle.py  test_guardian_mcp.py  test_guardian_meal.py  test_guardian_pickup.py  test_guardian_presence.py  test_guardian_zones.py  test_har_actions.py  test_har_fusion.py  test_har_idmap.py  test_har_runner.py  test_identity_binding.py  test_mcp_server.py  test_media_security.py  test_mediamtx_mux.py  test_person_alias.py  test_report_scheduler.py  test_rule_action_chain.py  test_rule_actions.py  test_rule_engine_conditions.py  test_rule_engine_cooldown.py  test_rule_engine_triggers.py  test_rule_replay_endpoint.py  test_rule_schema_geometry.py  (+10 more)
(+269 files in other folders)
