[project]
name = "nurby"
version = "0.1.0"
description = "AI camera monitoring platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis>=5.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "opencv-python-headless>=4.9.0",
    "av>=12.0.0",
    "numpy>=1.26.0",
    "pgvector>=0.3.0",
    "ultralytics>=8.2.0",
    "face_recognition>=1.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "aiosmtplib>=3.0.0",
    "nudenet>=3.4.0",
    "panns_inference>=0.1.0",
    "librosa>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.setuptools.packages.find]
include = ["services*", "shared*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
